fix the numerals are too high issue

--- a/css/style.css
+++ b/css/style.css
@@ -7014,7 +7014,7 @@ body:not(.tippy-touch) .tippy-popper[x-placement=left] .tippy-tooltip[data-anima
     #portfolioChartText div.portfolio-graph-info span {
       font-size: 16px;
       vertical-align: top;
-      line-height: 26px; }
+      line-height: 30px; }
       #portfolioChartText div.portfolio-graph-info span:nth-child(2) {
         font-size: 26px;
         line-height: initial; }
